# browser-engineering

./: .gitignore  LICENSE  README.md
.github/workflows/: python.yml  rust.yml
python/: browser.py  graphics.py  http.py  requirements.txt
python/tests/: test_http.py
rust/: Cargo.toml
rust/examples/: http.rs
rust/src/: http.rs  lib.rs  main.rs
